Added some css functionality

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
       <h1>Poké-Ballin</h1>
     </div>
     <div id="search-image">
-
+      <p id="select-text">Click on the image to select this player</p>
     </div>
     <div id="search-bar">
-      <form id="country-form">
+      <form id="player-form">
         <input type="text" name="player" placeholder="Find player" id="player-search" />
         <input type="submit" placeholder="Get player" id="get-player" />
       </form>
