Added parallel functions for computer response

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Poké-Ballin</title>
 </head>
 <body>
-  <header>
+  <header >
     <div id="logo">
       <h1>Poké-Ballin</h1>
     </div>
@@ -25,9 +25,9 @@
     </div>
   </header>
 
-  <main>
+  <main id="play-game">
     <div id="player-user">
-
+      <!-- <p>health</p> -->
     </div>
     <div id="computer-user">
 
