Did some styling

--- a/index.html
+++ b/index.html
@@ -27,13 +27,23 @@
 
   <main id="play-game">
     <div id="player-user">
-      <!-- <p>health</p> -->
-    </div>
-    <div id="computer-user">
+      <div id="playerUI-container">
 
+      </div>
+      <div id="playerImage-container">
+
+      </div>
     </div>
     <div id="moveused-text">
 
+    </div>
+     <div id="computer-user">
+       <div id="computerUI-container">
+
+       </div>
+       <div id="computerImage-container">
+
+      </div>
     </div>
     <div id="action-box">
       <div id="action-text">
@@ -43,7 +53,7 @@
         <p>Shoot</p>
       </div>
       <div id="move-2">
-        <p>Steal</p>
+        <p>Defend</p>
       </div>
       <div id="move-3">
         <p>Pass</p>
