Added basic styling to the gameplay section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     </div>
   </header>
 
+  <hr>
+
   <main id="play-game">
     <div id="player-user">
       <div id="playerUI-container">
@@ -49,17 +51,17 @@
       <div id="action-text">
         <p>Text</p>
       </div>
-      <div id="move-1">
-        <p>Shoot</p>
+      <div id="move1-container">
+        <button id="move-1" type="button">Shoot</button>
       </div>
-      <div id="move-2">
-        <p>Defend</p>
+      <div id="move2-container">
+        <button  id="move-2" type="button">Defend</button>
       </div>
-      <div id="move-3">
-        <p>Pass</p>
+      <div id="move3-container">
+        <button id="move-3" type="button">Pass</button>
       </div>
-      <div id="move-4">
-        <p>Box-out</p>
+      <div id="move4-container">
+        <button id="move-4" type="button">Box-out</button>
       </div>
     </div>
   </main>
