--- a/index.html
+++ b/index.html
@@ -11,6 +11,23 @@
 </head>
 <body>
   <header >
+
+
+    <!-- ********* GOT THIS FROM AN ONLINE SOURCE FOR A LOGO ***********-->
+    <!-- ********* https://codepen.io/blakeworsley/pen/pbdqBK *********** -->
+    <div id="outer-container">
+      <div class="container">
+        <div class="ball">
+          <div class="center">
+            <div class="center2">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ********* GOT THIS FROM AN ONLINE SOURCE FOR A LOGO ***********-->
+    <!-- ********* https://codepen.io/blakeworsley/pen/pbdqBK *********** -->
+    
     <div id="logo">
       <h1>Poké-Ballin</h1>
     </div>
@@ -49,7 +66,7 @@
     </div>
     <div id="action-box">
       <div id="action-text">
-        <p>Text</p>
+        <p id="action-prompt">Text</p>
       </div>
       <div id="move1-container">
         <button id="move-1" type="button">Shoot</button>
