Added logo, more media queries, and move logs

--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
   <header >
+    <img id="picture-logo" src='https://i.imgur.com/hsaXKfo.png' alt="curry pikachu logo">
+    <div id="search-prompt">
+      <h3>Search a NBA player's full name you want to use to battle!</h3>
+    </div>>
 
-
-
-    
-    <div id="logo">
-      <h1>Poké-Ballin</h1>
     </div>
     <div id="search-image">
       <p id="select-text">Click on the image to select this player</p>
@@ -29,6 +28,14 @@
     </div>
   </header>
 
+  <hr>
+    <div id="move-explanation">
+      <h3>How each moves damage is determined:</h3>
+      <h4>Shoot: Uses Three Pointers Made and Three Point Percentage [If Three Point Percentage is above or equal 40% = bonus damage]</h5>
+      <h4>Defend: Uses Steals and Blocks [If Steals or Blocks are above or equal to 2 = bonus damage]</h5>
+      <h4>Pass: Uses Assists [If Assists are above or equal to 7 = bonus damage]</h5>
+      <h4>Box-out: Uses Rebounds [If Rebounds are above or equal to 7 = bonus damage]</h5>
+    </div>
   <hr>
 
   <main id="play-game">
