Added a replay function

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <title>Poké-Ballin</title>
 </head>
 <body>
-  <header >
+  <header id='beginning'>
     <img id="picture-logo" src='https://i.imgur.com/hsaXKfo.png' alt="curry pikachu logo">
     <div id="search-prompt">
       <h3>Search a NBA player's full name you want to use to battle!</h3>
-    </div>>
+    </div>
 
     </div>
     <div id="search-image">
