New design backgrounds

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header id='beginning'>
     <img id="picture-logo" src='https://i.imgur.com/hsaXKfo.png' alt="curry pikachu logo">
     <div id="search-prompt">
-      <h3>Search a NBA player's full name you want to use to battle!</h3>
+      <h3>Search a current NBA player's full name you want to use to battle!</h3>
     </div>
 
     </div>
